Make mordant-omnibus publish on all MPP targets (#228)